Bug 26498 - UBSAN error: bfd/elf32-spu.c:2292:7:
Summary: UBSAN error: bfd/elf32-spu.c:2292:7:
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.34
: P2 normal
Target Milestone: 2.36
Assignee: Alan Modra
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-20 12:42 UTC by Martin Liska
Modified: 2020-08-26 14:39 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed: 2020-08-26 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Liska 2020-08-20 12:42:08 UTC
The following fails when I build binutils with:
configure --build=x86_64-linux --disable-nls --disable-gdb --disable-gdbserver --disable-sim --disable-readline --disable-libdecnumber --enable-obsolete --target=spu-elf CFLAGS="-g -O2 -fsanitize=address,undefined -Wno-error" CXXLAGS="-g -O2 -fsanitize=address,undefined -Wno-error" LDFLAGS="-ldl"
Target: spu-elf
FAIL: ld-spu/fixup
Executing on host: sh -c {./ld-new   -L/home/mliska/Programming/binutils/ld/testsuite/ld-spu  --soft-icache --num-lines=4 --non-ia-text --auto-overlay=tmpdir/icache1.lnk --auto-relink -o tmpdir/dump tmpdir/icache1.o  2>&1}  /dev/null dump.tmp (timeout = 300)
/home/mliska/Programming/binutils/bfd/elf32-spu.c:2292:7: runtime error: left shift of 65535 by 16 places cannot be represented in type 'int'
Comment 1 Sourceware Commits 2020-08-26 13:55:18 UTC
The master branch has been updated by Alan Modra <amodra@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=2d0ce6779c25fb28b3b35cee02871b9a8d4cd29b

commit 2d0ce6779c25fb28b3b35cee02871b9a8d4cd29b
Author: Alan Modra <amodra@gmail.com>
Date:   Wed Aug 26 20:02:07 2020 +0930

    PR26498 UBSAN: elf32-spu.c:2292 left shift overflow
    
            PR 26498
            * elf32-spu.c (find_function_stack_adjust): Use unsigned vars to
            avoid UB left shift.
Comment 2 Alan Modra 2020-08-26 14:39:46 UTC
Fixed