PR26498 UBSAN: elf32-spu.c:2292 left shift overflow

PR 26498
	* elf32-spu.c (find_function_stack_adjust): Use unsigned vars to
	avoid UB left shift.